--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
     <!-- Java 9+ -->
     <commons.automatic.module.name>org.apache.commons.rng.parent</commons.automatic.module.name>
     <!-- do not use snapshot suffix here -->
-    <commons.release.version>1.3</commons.release.version>
-    <commons.bc.version>${commons.release.version}</commons.bc.version>
+    <commons.release.version>1.4</commons.release.version>
+    <commons.bc.version>1.4</commons.bc.version>
     <commons.rc.version>RC1</commons.rc.version>
     <commons.release.desc>(requires Java 8+)</commons.release.desc>
     <commons.binary.suffix>-bin</commons.binary.suffix>
