RNG-168: LXM family of random number generators
Add support for generators included in JDK 17:

L64X128StarStar
L64X128Mix
L64X256Mix
L64X1024Mix
L128X128Mix
L128X256Mix
L128X1024Mix

Added benchmark for support routines for computing the unsigned long
multiplications in the 128-bit LCG (linear congruential generator).

Added a benchmark for the jump function to allow comparison with the
equivalent base XBG (xor-based generator).

--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -81,6 +81,17 @@
        mvn test -DskipTests=false
     -->
     <skipTests>true</skipTests>
+
+    <!-- Java language level.
+        Increase to allow benchmarking with new JDK methods
+        for example Math.multiplyHigh (JDK 9) or Math.unsignedMultiplyHigh (JDK 18)
+        in LXMBenchmark. -->
+    <!--
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <animal.sniffer.skip>true</animal.sniffer.skip>
+    -->
+
   </properties>
 
   <profiles>
