--- a/commons-rng-simple/pom.xml
+++ b/commons-rng-simple/pom.xml
@@ -45,6 +45,11 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-client-api</artifactId>
+      <version>1.5-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-core</artifactId>
       <version>1.5-SNAPSHOT</version>
     </dependency>
