Ignore IntBuffer in animal sniffer
JDK9 breaks compatibility with older versions for IntBuffer.flip() by
returning IntBuffer instead of Buffer.

This ignores this change to allow building on JDK 9+.

--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -76,6 +76,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>animal-sniffer-maven-plugin</artifactId>
+        <configuration>
+          <ignores>
+            <ignore>java.nio.IntBuffer</ignore>
+          </ignores>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
