--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,5 +47,5 @@ jobs:
     - name: Build examples with Maven
       # Examples require Java 11+
       if: contains(matrix.java, '11')
-      working-directory: ./commons-numbers-examples
+      working-directory: ./commons-rng-examples
       run: mvn -V --no-transfer-progress
