--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,9 +43,8 @@ jobs:
         java-version: ${{ matrix.java }}
     - name: Build with Maven
       # Use the default goal
-      run: mvn -V --no-transfer-progress
-    - name: Build examples with Maven
       # Examples require Java 11+
       if: matrix.java > 8
-      working-directory: ./commons-rng-examples
+      run: mvn -V --no-transfer-progress -P commons-rng-examples
+      if: matrix.java == 8
       run: mvn -V --no-transfer-progress
