--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
        depend on other packages. -->
     <commons.jxr.version>2.5</commons.jxr.version>
 
-    <commons.jacoco.haltOnFailure>false</commons.jacoco.haltOnFailure>
+    <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
 
     <commons.site.path>rng</commons.site.path>
     <commons.scmPubUrl>https://svn.apache.org/repos/infra/websites/production/commons/content/proper/commons-rng</commons.scmPubUrl>
