--- a/pom.xml
+++ b/pom.xml
@@ -369,6 +369,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+          <failOnWarnings>true</failOnWarnings>
           <!-- Enable MathJax -->
           <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
         </configuration>
@@ -503,6 +504,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+          <failOnWarnings>true</failOnWarnings>
           <!-- Enable MathJax -->
           <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
         </configuration>
