Allow javadoc warnings in the JMH module
Enables building on JDK 17

--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -105,6 +105,7 @@
           <sourceFileExcludes>
             <sourceFileExclude>**/jmh_generated/*.java</sourceFileExclude>
           </sourceFileExcludes>
+          <failOnWarnings>false</failOnWarnings>
         </configuration>
       </plugin>
       <plugin>
@@ -127,6 +128,7 @@
           <sourceFileExcludes>
             <sourceFileExclude>**/jmh_generated/*.java</sourceFileExclude>
           </sourceFileExcludes>
+          <failOnWarnings>false</failOnWarnings>
         </configuration>
       </plugin>
       <plugin>
