--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-parent</artifactId>
-    <version>53</version>
+    <version>54</version>
   </parent>
 
   <artifactId>commons-rng-parent</artifactId>
@@ -65,6 +65,8 @@
     <rng.junit5.version>5.7.2</rng.junit5.version>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
+    <!-- Multi-module support fixed in commons-parent 55 -->
+    <cyclonedx.skip>true</cyclonedx.skip>
 
     <!-- Fix to avoid JXR 3.0.0 forking the lifecycle phase 'compile' during site report
        jxr:aggregate. If compile is forked it fails when building the Java 9 modules that
@@ -360,6 +362,8 @@
             <exclude>**/*.patch</exclude>
             <exclude>**/pdf.*.txt</exclude>
             <exclude>src/main/resources/revapi/api-changes.json</exclude>
+            <!-- Moved to commons-parent 55 -->
+            <exclude>.gitattributes</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -369,6 +373,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+          <!-- Java API links configured in commons-parent create redirect warnings on JDK 17
+            and fail the build. The links are not required as detectJavaApiLink=true (default). -->
+          <links combine.self="override">
+          </links>
           <failOnWarnings>true</failOnWarnings>
           <!-- Enable MathJax -->
           <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
@@ -407,6 +415,8 @@
             <exclude>dist-archive/**</exclude>
             <exclude>**/*.patch</exclude>
             <exclude>**/pdf.*.txt</exclude>
+            <!-- Moved to commons-parent 55 -->
+            <exclude>.gitattributes</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -504,6 +514,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+          <!-- Java API links configured in commons-parent create redirect warnings on JDK 17
+            and fail the build. The links are not required as detectJavaApiLink=true (default). -->
+          <links combine.self="override">
+          </links>
           <failOnWarnings>true</failOnWarnings>
           <!-- Enable MathJax -->
           <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
