--- a/pom.xml
+++ b/pom.xml
@@ -677,14 +677,11 @@ This is avoided by creating an empty directory when svn is not available.
 
     <!--
         Profiles for modules with special requirements.
+        These are combined with the existing <modules>.
     -->
     <profile>
       <id>commons-rng-examples</id>
       <modules>
-        <module>commons-rng-client-api</module>
-        <module>commons-rng-core</module>
-        <module>commons-rng-simple</module>
-        <module>commons-rng-sampling</module>
         <module>commons-rng-examples</module>
       </modules>
     </profile>
@@ -692,10 +689,6 @@ This is avoided by creating an empty directory when svn is not available.
     <profile>
       <id>release</id>
       <modules>
-        <module>commons-rng-client-api</module>
-        <module>commons-rng-core</module>
-        <module>commons-rng-simple</module>
-        <module>commons-rng-sampling</module>
         <!-- Examples are not part of the binary release so do not include in the build.
              Use the commons-rng-examples profile to create the site. -->
         <module>dist-archive</module>
@@ -706,10 +699,6 @@ This is avoided by creating an empty directory when svn is not available.
       <!-- Include an aggregate module to build aggregate javadoc and test coverage reports -->
       <id>docs</id>
       <modules>
-        <module>commons-rng-client-api</module>
-        <module>commons-rng-core</module>
-        <module>commons-rng-simple</module>
-        <module>commons-rng-sampling</module>
         <module>docs-archive</module>
       </modules>
     </profile>
