--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
     <module>commons-rng-core</module>
     <module>commons-rng-simple</module>
     <module>commons-rng-sampling</module>
+    <module>commons-rng-bom</module>
     <!--
         The examples are built only upon explicit request (requires Java 11).
         See profiles: "commons-rng-examples"; "release"
