--- a/commons-rng-core/pom.xml
+++ b/commons-rng-core/pom.xml
@@ -24,11 +24,11 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.5-SNAPSHOT</version>
+    <version>1.5</version>
   </parent>
 
   <artifactId>commons-rng-core</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>1.5</version>
   <name>Apache Commons RNG Core</name>
 
   <description>Pure Java implementations of random numbers generator algorithms.
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-rng-client-api</artifactId>
-      <version>1.5-SNAPSHOT</version>
+      <version>1.5</version>
     </dependency>
     <dependency>
       <!-- For testing floating point precision -->
