--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -26,11 +26,11 @@ under the License.
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.5-SNAPSHOT</version>
+    <version>1.5</version>
   </parent>
 
   <artifactId>commons-rng</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>1.5</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
@@ -68,18 +68,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -87,18 +87,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -106,18 +106,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -125,18 +125,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.5</version>
           <classifier>javadoc</classifier>
         </dependency>
 
