--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -17,20 +17,17 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 -->
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.5-SNAPSHOT</version>
+    <version>1.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>commons-rng</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>1.6-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
@@ -68,18 +65,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -87,18 +84,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -106,18 +103,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -125,18 +122,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.5-SNAPSHOT</version>
+          <version>1.6-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
