Add site configuration for docs-archive
Allows the site to be built with aggregate javadoc and jacoco reports in
a docs module.

--- a/docs-archive/pom.xml
+++ b/docs-archive/pom.xml
@@ -39,6 +39,7 @@
     <maven.deploy.skip>true</maven.deploy.skip>
     <!-- Simple site -->
     <pmd.skip>true</pmd.skip>
+    <cpd.skip>true</cpd.skip>
     <spotbugs.skip>true</spotbugs.skip>
     <checkstyle.skip>true</checkstyle.skip>
     <changes.jira.skip>true</changes.jira.skip>
