--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -38,10 +38,10 @@ jobs:
         distribution: temurin
         java-version: ${{ matrix.java }}
         cache: 'maven'
-    - name: Build with Maven including the docs-archive module using a profile
+    - name: Build with Maven including the commons-rng-docs module using a profile
       run: mvn -V -Pdocs test jacoco:report-aggregate --no-transfer-progress
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
-        files: ./docs-archive/target/site/jacoco-aggregate/jacoco.xml
+        files: ./commons-rng-docs/target/site/jacoco-aggregate/jacoco.xml
