--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
         java: [ 8 ]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3 
       with:
         persist-credentials: false
     - name: Set up JDK ${{ matrix.java }}
@@ -38,8 +38,8 @@ jobs:
         distribution: temurin
         java-version: ${{ matrix.java }}
         cache: 'maven'
-    - name: Build with Maven including the commons-rng-docs module using a profile
-      run: mvn -V -Pdocs test jacoco:report-aggregate --no-transfer-progress
+    - name: Build with Maven
+      run: mvn -V test jacoco:report-aggregate --no-transfer-progress
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
