Update to use commons.module.name (consitent with CP)

--- a/commons-rng-client-api/pom.xml
+++ b/commons-rng-client-api/pom.xml
@@ -35,7 +35,7 @@
     <commons.osgi.symbolicName>org.apache.commons.rng</commons.osgi.symbolicName>
     <commons.osgi.export>org.apache.commons.rng</commons.osgi.export>
     <!-- Java 9+ -->
-    <commons.automatic.module.name>org.apache.commons.rng.api</commons.automatic.module.name>
+    <commons.module.name>org.apache.commons.rng.api</commons.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
     <rng.jira.component>client-api</rng.jira.component>
