--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -39,7 +39,7 @@
     <commons.osgi.symbolicName>org.apache.commons.rng.examples</commons.osgi.symbolicName>
     <commons.osgi.export>org.apache.commons.rng.examples</commons.osgi.export>
     <!-- Java 9+ -->
-    <commons.automatic.module.name>org.apache.commons.rng.examples</commons.automatic.module.name>
+    <commons.module.name>org.apache.commons.rng.examples</commons.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
 
