--- a/.asf.yaml
+++ b/.asf.yaml
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 github:
-  description: "Pseudo-random numbers generators"
+  description: "Apache Commons RNG (Pseudo-random number generators)"
   homepage: https://commons.apache.org/rng
   labels:
     - java
@@ -27,3 +27,12 @@ github:
     - reference
     - easy
     - fast
+
+notifications:
+    commits:      commits@commons.apache.org
+    issues:       issues@commons.apache.org
+    pullrequests: issues@commons.apache.org
+    jira_options: link label
+    jobs:         notifications@commons.apache.org
+    issues_bot_dependabot: notifications@commons.apache.org
+    pullrequests_bot_dependabot: notifications@commons.apache.org
