--- a/commons-rng-examples/examples-jpms/pom.xml
+++ b/commons-rng-examples/examples-jpms/pom.xml
@@ -38,6 +38,7 @@
     <!-- Java language level. -->
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <commons.compiler.release>11</commons.compiler.release>
     <animal.sniffer.skip>true</animal.sniffer.skip>
     <maven.compiler.release>11</maven.compiler.release>
   </properties>
