Log checkstyle violations to console

--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,8 @@
           <headerLocation>${rng.parent.dir}/src/main/resources/checkstyle/license-header.txt</headerLocation>
           <suppressionsLocation>${rng.parent.dir}/src/main/resources/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
           <enableRulesSummary>false</enableRulesSummary>
-          <logViolationsToConsole>false</logViolationsToConsole>
+          <!-- Output the detected violations to the console (for checkstyle:check). -->
+          <logViolationsToConsole>true</logViolationsToConsole>
           <failOnViolation>true</failOnViolation>
           <resourceExcludes>NOTICE,LICENSE,**/pom.properties,**/resolver-status.properties,**/sha512.properties</resourceExcludes>
         </configuration>
